--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <modules>
         <module>InternalRestApi</module>
         <module>RandomGeneratorRestApi</module>
-        <module>RandomGeneratorRestApi</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -34,14 +33,6 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-dependencies</artifactId>
-            <version>1.5.6.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
@@ -64,4 +55,14 @@
             <version>2.25.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
